--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>generics</module>
-        <module>afnantestcase</module>
+        <module>amazon</module>
     </modules>
 
     <dependencies>
