--- a/pom.xml
+++ b/pom.xml
@@ -9,8 +9,8 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
     <modules>
+        <module>src</module>
         <module>generics</module>
-        <module>afnantestcase</module>
     </modules>
 
     <dependencies>
