--- a/amazon/src/test/resources/secret.properties
+++ b/amazon/src/test/resources/secret.properties
@@ -1,2 +1,5 @@
-GOOGLE.spreadsheetId=1vAbfOJdaUL949E4lKgvBmaJwU5nwxFiEVtuY4KFLJ3U
-GOOGLE.range=Sheet1!A2:C
+GOOGLE.spreadsheetId1=1vAbfOJdaUL949E4lKgvBmaJwU5nwxFiEVtuY4KFLJ3U
+GOOGLE.range1=Sheet1!A2:C
+
+GOOGLE.spreadsheetId2=1onSU3jTqPjAd0hdUK4rGc0h0FpZIqI0WV_m3KoeXTxY
+GOOGLE.range2=Sheet1!A2:C
